--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <title>API</title>
-    </head>
-    <body>
-        <header>
-            <h1>API</h1>
-        </header>
-        <main>
-            Documentation goes here
-        </main>
-        <footer>
-
-        </footer>
-    </body>
+  <head>
+    <title>API</title>
+    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>API</h1>
+    </header>
+    <main>
+        <section>
+            &nbsp;
+        </section>
+        <section>
+            &nbsp;
+        </section>
+    </main>
+    <footer>
+        &nbsp;
+    </footer>
+  </body>
 </html>
